crates/nano-tui/tests/snapshots/l1_snapshots__snapshot_approval_modal.snap
---
source: crates/nano-tui/tests/l1_snapshots.rs
assertion_line: 72
expression: "render_to_test_backend(&world.app, 80, 24)"
---
"· nano-tui — connecting to wayland-nano acp-host                                "
"· session ready: wayland-nano-session-recorded                                  "
"› write note                                                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"    ┌ Approve? fs_write ───────────────────────────────────────────────────┐    "
"    │{"content":"hello","path":"note.txt"}                                 │    "
"    │› Allow once                                                          │    "
"    │    allow_once                                                        │    "
"    │  Deny                                                                │    "
"    │    reject_once                                                       │    "
"    │                                                                      │    "
"    │ Enter decides · Esc denies                                           │    "
"    └──────────────────────────────────────────────────────────────────────┘    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" › ─────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
" flux-auto | default | awaiting approval | wayland-nano | /model /mode /plan /to"
