crates/nano-tui/tests/snapshots/l1_snapshots__snapshot_model_picker.snap
---
source: crates/nano-tui/tests/l1_snapshots.rs
expression: "render_to_test_backend(&world.app, 80, 24)"
---
"· nano-tui — connecting to wayland-nano acp-host                                "
"· session ready: wayland-nano-session-recorded                                  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"    ┌ Switch model (session/set_model) ────────────────────────────────────┐    "
"    │› Flux Auto (current)                                                 │    "
"    │  Flux Fast                                                           │    "
"    │                                                                      │    "
"    │ Enter selects · Esc cancels                                          │    "
"    └──────────────────────────────────────────────────────────────────────┘    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" › ─────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
" flux-auto | default | ready | wayland-nano | /model /mode /status /doctor /comp"
