crates/nano-tui/tests/snapshots/l1_snapshots__snapshot_streaming_active_cell.snap
---
source: crates/nano-tui/tests/l1_snapshots.rs
expression: "render_to_test_backend(&world.app, 60, 12)"
---
"· nano-tui — connecting to wayland-nano acp-host            "
"· session ready: wayland-nano-session-recorded              "
"streaming answer so far                                     "
"▌                                                           "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
" › ─────────────────────────────────────────────────────────"
"                                                            "
"                                                            "
" flux-auto | default | ready | wayland-nano | /model /mode /"
