crates/nano-tui/tests/snapshots/l1_snapshots__snapshot_transcript_cells.snap
---
source: crates/nano-tui/tests/l1_snapshots.rs
expression: "render_to_test_backend(&world.app, 80, 24)"
---
"· nano-tui — connecting to wayland-nano acp-host                                "
"· session ready: wayland-nano-session-recorded                                  "
"› read the README                                                               "
"The README says…                                                                "
"⚒ fs_read [completed]                                                           "
"  {"path":"README.md"}                                                          "
"  ↳ completed: # Wayland Nano                                                   "
"· doctor: 0 fail, 1 warn                                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" › ─────────────────────────────────────────────────────────────────────────────"
"                                                                                "
"                                                                                "
" flux-auto | ready | wayland-nano-sessio | /model /status /doctor /compact /quit"
